[package]
name = "crates"
version = "0.1.0"
edition = "2021"
description = "A beautiful CLI app to explore the Rust ecosystem"
authors = ["Gokul <@bahdotsh>"]
license = "MIT"

[dependencies]
ratatui = "0.20.0"
crossterm = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4"
