[package]
name = "crates"
version = "0.1.0"
edition = "2021"
description = "A beautiful CLI app to explore the Rust ecosystem"
authors = ["Gokul <@bahdotsh>"]
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.23.0"
crossterm = "0.27.0"
chrono = "0.4.24"
